crates/reinhardt-pages/tests/ui/client_form/fail/server_fn_submit_error_conversion.stderr
error[E0277]: the trait bound `ServerFnError: From<SubmitError>` is not satisfied
 --> tests/ui/client_form/fail/server_fn_submit_error_conversion.rs:5:52
  |
5 | #[derive(Clone, PartialEq, Serialize, Deserialize, ClientForm)]
  |                                                    ^^^^^^^^^^ the trait `From<SubmitError>` is not implemented for `ServerFnError`
  |
help: the trait `From<SubmitError>` is not implemented for `ServerFnError`
      but trait `From<reinhardt_pages::client_form::__private::DtoValidationErrors>` is implemented for it
 --> src/server_fn/server_fn_trait.rs
  |
  | impl From<ValidationErrors> for ServerFnError {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: for that trait implementation, expected `reinhardt_pages::client_form::__private::DtoValidationErrors`, found `SubmitError`
  = note: required for `SubmitError` to implement `Into<ServerFnError>`
  = note: this error originates in the derive macro `ClientForm` (in Nightly builds, run with -Z macro-backtrace for more info)
